terraform/aws_instance_centos_jenkins.tf
resource "aws_instance" "centos-jenkins" {
  ami           = var.centos-ami
  instance_type = var.instance-type
  key_name = "centos-ssh"
  
  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.centos-nic-jenkins.id
  }

  tags = var.centos-jenkins-tags
}
